--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <title>Document</title>
   </head>
   <body>
-    <header></header>
+    <header>
+        <!-- Шапка проекту -->
+        <h1>Персональні дані "БУРЯЧКА"</h1>
+        <nav>
+            <a href="#fill-the-form">Реєструйся тут</a><br>
+            <a href="mailto:tarasmash74@gmail.com">Напиши нам</a><br>
+            <a href="tel:+380503735401">Позвони нам</a><br>
+            <a href="">Контактна інформація</a>
+        </nav>
+    </header>
+    <!-- Головна частина -->
     <main></main>
+    <!-- Підвальна частина -->
     <footer></footer>
   </body>
 </html>
