added comments to the main tag into  index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </header>
     <!-- Головна частина -->
     <main>
+      <!-- Стаття -->
       <article id="about-us-article" style="width: 1000px">
         <h2><strong>Lorem ipsum dolor sit amet!</strong></h2>
         <p>
@@ -221,6 +222,7 @@
         <p><i>Lorem Ipsum</i></p>
         <p><i>27.01.2022</i></p>
       </article>
+      <!-- Наші курси -->
       <section id="our-courses">
         <h2>Our Courses</h2>
         <div>
@@ -244,6 +246,7 @@
           /></a>
         </div>
       </section>
+      <!-- Наші уроки -->
       <section id="our-lessons">
         <h2>Our Lessons</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/FII4DRuiLLI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -252,6 +255,7 @@
         <h2>Our Students</h2>
         <iframe src="https://viramatiiash.github.io/lesson-three-git/lesson-three-git/git.html" frameborder="0" width="600"></iframe>
       </section>
+      <!-- Форма -->
       <form id="fill-the-form">
         <h2>Fill the Form</h2>
         <input type="radio" id="male" name="sex" value="male" />
