--- a/index.html
+++ b/index.html
@@ -4,22 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/index.css" />
     <title>Document</title>
   </head>
   <body>
-    <header>
-        <!-- Шапка проекту -->
-        <h1>Персональні дані "БУРЯЧКА"</h1>
-        <nav>
-            <a href="#fill-the-form">Реєструйся тут</a><br>
-            <a href="mailto:tarasmash74@gmail.com">Напиши нам</a><br>
-            <a href="tel:+380503735401">Позвони нам</a><br>
-            <a href="">Контактна інформація</a>
-        </nav>
+    <!-- HEADER -->
+    <header class="container">
+      <img src="./assets/images/BT.svg" alt="logo Beetroot" width="150px">
+      <h1>
+        Персональні дані<br />
+        "БУРЯЧКА"
+      </h1>
+      <nav class="menuLinks">
+        <a href="#fill-the-form">Реєструйся<br />тут</a>
+        <a href="mailto:tarasmash74@gmail.com"
+          >Напиши<br />
+          нам</a
+        >
+        <a href="tel:+380503735401"
+          >Позвони<br />
+          нам</a
+        >
+        <a href="./assets/images/BT.svg"
+          >Контактна<br />
+          інформація</a
+        >
+      </nav>
     </header>
-    <!-- Головна частина -->
+    <!-- MAIN PART -->
     <main></main>
-    <!-- Підвальна частина -->
+    <!-- FOOTER -->
     <footer></footer>
   </body>
 </html>
